[gd_scene load_steps=3 format=3 uid="uid://wqwvtvb26qs5"]

[ext_resource type="Script" uid="uid://dicp8e1w542c0" path="res://scenes/Menu scripts/start_menu.gd" id="1_fb70i"]

[sub_resource type="GDScript" id="GDScript_ufv5y"]
script/source = "extends Button

func _ready():
	pass

func _on_Start_pressed():
	get_tree().change_scene(\"res://scene.tscn\")
"

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_bottom = -648.0
grow_vertical = 0
script = ExtResource("1_fb70i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 393.0
offset_top = 273.5
offset_right = 759.0
offset_bottom = 374.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"
script = SubResource("GDScript_ufv5y")

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
